@@ -9,7 +9,7 @@ the kernel for using hdparm with ATAPI (CD/DVD/tape) drives.
 	02_libata_atapi_ata16.patch
 
 Both of these are required for any kernel prior to 2.6.22,
-and only the second one should be necessary for later kernels.
+and only the second one should be needed with later kernels.
 
 * * * 
 
@@ -17,7 +17,8 @@ There is also another patch in this directory to enable "libata"
 to deal with drives that have been set for "power-up in standby"
 (eg. using "hdparm -s1").  Without this patch, such drives become
 expensive paperweights, at least until booted under a kernel
-that has had the patch applied.
+that has had the patch applied.  This patch is needed for all
+kernels prior to 2.6.22.
 
 	03_libata_standby_spinup.patch
 
